--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
             <artifactId>hibernate-core</artifactId>
             <version>5.2.16.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
