--- a/HadlerSystem/config.ini
+++ b/HadlerSystem/config.ini
@@ -1,4 +1,7 @@
 URL = jdbc:postgresql://localhost:5432/bcapp
+HOST = localhost
+PORT = 8080
+BACKLOG = 128
 DB_USER_NAME = mikhail
 DB_USER_PASSWORD = mikhail
 DRIVER_CLASS_NAME = org.postgresql.Driver
