--- a/HadlerSystem/pom.xml
+++ b/HadlerSystem/pom.xml
@@ -106,6 +106,14 @@
             <version>1.11.2</version>
         </dependency>
 
+        <!-- for database driver -->
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901-1.jdbc4</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
