--- a/HadlerSystem/pom.xml
+++ b/HadlerSystem/pom.xml
@@ -113,6 +113,28 @@
             <version>9.1-901-1.jdbc4</version>
         </dependency>
 
+        <!-- for testing -->
+
+
+        <!-- for logging -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.1.0-M1</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
