--- a/HadlerSystem/config.ini
+++ b/HadlerSystem/config.ini
@@ -2,5 +2,11 @@ URL = jdbc:postgresql://localhost:5432/bcapp
 HOST = localhost
 PORT = 8080
 BACKLOG = 128
-DB_USER_NAME = mikhail
-DB_USER_PASSWORD = mikhail
+
+# home mode
+#DB_USER_NAME = mikhail
+#DB_USER_PASSWORD = mikhail
+
+# work mode
+DB_USER_NAME = mikhailme
+DB_USER_PASSWORD = mikhailme
