added transaction message

--- a/HadlerSystem/config.ini
+++ b/HadlerSystem/config.ini
@@ -4,9 +4,9 @@ PORT = 8080
 BACKLOG = 128
 
 # home mode
-#DB_USER_NAME = mikhail
-#DB_USER_PASSWORD = mikhail
+DB_USER_NAME = mikhail
+DB_USER_PASSWORD = mikhail
 
 # work mode
-DB_USER_NAME = mikhailme
-DB_USER_PASSWORD = mikhailme
+#DB_USER_NAME = mikhailme
+#DB_USER_PASSWORD = mikhailme
