--- a/bcapp_client/app/src/main/AndroidManifest.xml
+++ b/bcapp_client/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Activities.BetActivity"
+            android:name=".Activities.AuthorizationActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -20,9 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activities.MainActivity" />
-        <activity android:name=".Activities.BetPreviewActivity" />
         <activity android:name=".Activities.OracleActivity" />
-        <activity android:name=".Activities.AuthorizationActivity" />
+        <activity android:name=".Activities.BetActivity" />
     </application>
 
 </manifest>
