--- a/bcapp_client/app/build.gradle
+++ b/bcapp_client/app/build.gradle
@@ -56,10 +56,13 @@ dependencies {
     implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'
 
     // for lombok annotations
-    compileOnly "org.projectlombok:lombok:1.16.16"
-    annotationProcessor "org.projectlombok:lombok:1.16.16"
+    compileOnly "org.projectlombok:lombok:1.16.20"
+    annotationProcessor "org.projectlombok:lombok:1.16.20"
 
     // for work with json format files
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+
+    // for riple effect
+    implementation 'com.balysv:material-ripple:1.0.2'
 
 }
