added recycler view for list of games

--- a/bcapp_client/app/src/main/AndroidManifest.xml
+++ b/bcapp_client/app/src/main/AndroidManifest.xml
@@ -19,9 +19,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.MainActivity" />
         <activity android:name=".Activities.OracleActivity" />
         <activity android:name=".Activities.BetActivity" />
+        <activity
+            android:name=".Activities.MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
