--- a/bcapp_client/app/build.gradle
+++ b/bcapp_client/app/build.gradle
@@ -68,4 +68,7 @@ dependencies {
     // for access to Iroha API
     implementation 'jp.co.soramitsu.iroha.android:iroha-android-bindings:1.0'
 
+    // for RecyclerView
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+
 }
