--- a/bcapp_client/app/build.gradle
+++ b/bcapp_client/app/build.gradle
@@ -71,4 +71,10 @@ dependencies {
     // for RecyclerView
     implementation 'com.android.support:recyclerview-v7:27.1.1'
 
+    // for GRPC
+    implementation 'io.grpc:grpc-protobuf:1.11.0'
+    implementation 'io.grpc:grpc-okhttp:1.11.0'
+    implementation 'io.grpc:grpc-stub:1.11.0'
+    implementation 'io.grpc:grpc-testing:1.11.0'
+
 }
