--- a/iroha-android-sample/src/main/AndroidManifest.xml
+++ b/iroha-android-sample/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="jp.co.soramitsu.iroha.android.sample">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ" />
@@ -11,9 +13,9 @@
     <application
         android:name=".SampleApplication"
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_logo"
         android:sharedUserId="com.example.testproject.uid"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
@@ -22,23 +24,20 @@
             android:name=".main.MainActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
+
         <activity
             android:name=".list.ListActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-
-
-
+            android:label="@string/title_activity_list"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
-        <!--
-             android:name=".registration.Regis<activity
-            android:name=".games.GamesActivity"
-            android:label="@string/title_activity_games"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>trationActivity"
-        -->
-        <activity android:name=".oracle.OracleActivity" />
         <activity android:name=".bet.BetActivity" />
+        <activity android:name=".oracle.OracleActivity" />
+        <activity android:name=".registration.RegistrationActivity"/>
     </application>
 
 </manifest>
