--- a/iroha-android-sample/src/main/AndroidManifest.xml
+++ b/iroha-android-sample/src/main/AndroidManifest.xml
@@ -20,24 +20,35 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity
-            android:name=".main.MainActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
 
-        <activity
-            android:name=".list.ListActivity"
-            android:label="@string/title_activity_list"
-            android:theme="@style/AppTheme">
+        <!-- start registration activity -->
+        <activity android:name=".registration.RegistrationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
+        <!-- main activity -->
+        <activity
+            android:name=".main.MainActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+
+        <!-- list of games activity -->
+        <activity
+            android:name=".list.ListActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
+
+        </activity>
+
+        <!-- bet activity -->
         <activity android:name=".bet.BetActivity" />
+
+        <!-- oracle activity -->
         <activity android:name=".oracle.OracleActivity" />
-        <activity android:name=".registration.RegistrationActivity"/>
+
     </application>
 
 </manifest>
