--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jun 04 13:16:21 MSK 2018
-sdk.dir=/home/mikhailme/Android/Sdk
+#Mon Jun 04 17:34:02 MSK 2018
+ndk.dir=/home/mikhail/Android/Sdk/ndk-bundle
+sdk.dir=/home/mikhail/Android/Sdk
