--- a/iroha-android-sample/build.gradle
+++ b/iroha-android-sample/build.gradle
@@ -91,6 +91,7 @@ dependencies {
     compileOnly 'javax.annotation:javax.annotation-api:1.3.1'
     annotationProcessor 'org.projectlombok:lombok:1.16.20'
 
+    // for Json for Json format
     implementation "com.orhanobut:logger:2.2.0"
     implementation 'com.google.code.gson:gson:2.8.2'
 
